update code authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,43 @@
 # Tên ứng dụng
 spring.application.name=DATN_BackEnd
 
-#server.port=8081
-#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=dbdatn;encrypt=true;trustServerCertificate=true
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.jpa.open-in-view=false
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.properties.hibernate.use_sql_comments=true
-#spring.jpa.properties.hibernate.enable_lazy_load=true
-#spring.main.banner-mode=off
-#logging.level.root=WARN
-#spring.jackson.serialization.write_dates_as_timestamps=false
+server.port=8080
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=dbdatn;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=123456aA@$
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.enable_lazy_load=true
+spring.main.banner-mode=off
+logging.level.root=WARN
+
+# Emaildev
+spring.mail.host=localhost
+spring.mail.port=1025
+spring.mail.username=ali
+spring.mail.password=ali
+spring.mail.properties.smtp.trust=*
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.starttls.required=false
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=3000
+spring.mail.properties.mail.smtp.writetimeout=5000
+#Email gg
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=
+#spring.mail.password=
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=3000
+#spring.mail.properties.mail.smtp.writetimeout=5000
 
 
 # Đường dẫn cho tài liệu OpenAPI (swagger)
@@ -27,7 +50,6 @@ springdoc.swagger-ui.urls[0].url=http://localhost:8080/v3/api-docs
 # Thông tin thêm về tài liệu API (nếu cần trong UI)
 openapi.service.title=API Documents WebSite TuyenDung TimViec
 openapi.service.version=1.0.0
-
 
 #spring.datasource.url=jdbc:h2:mem:dbtest
 #spring.datasource.driver-class-name=org.h2.Driver
